--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,10 +7,17 @@
 <body>
 <p>L2.1 example</p>
 
-<form action="/api/v1/sessions" method="POST">
+<form action="/signin" method="POST">
     Login: <input type="text" name="login"/>
     Password: <input type="password" name="pass"/>
+    <br>
     <input type="submit" value="Sign in">
 </form>
+
+<form action="/signup" method="POST">
+    <input type="submit" value="Sign up">
+</form>
+
+
 </body>
 </html>
